[project]
name = "poker"
version = "0.1.0"
description = "Texas Hold'em Poker - Command Line Game"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
poker = "poker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
